test/vm/errors/parser/unclosed_bracket.ach
// Parser error: unclosed bracket in array literal
// Expected: error about expected `]`

let items = [1, 2, 3, 4
let other = 5
